*pdfpc-3.1.1 (24 Aug 2012)

  24 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu +metadata.xml,
  +pdfpc-3.1.1.ebuild:
  x11-misc/pdfpc: New version #430862