@@ -1,4 +1,4 @@
 DIST pdfpc-3.1.1.tgz 199004 SHA256 ec5ffb9c2b55d1bac76172a6a13ed527ceed8cf0d659aca5e302f6a7185f00f2 SHA512 554203094b18fe11fd085414961de6644df3c258ad52d46ad171cfd6c2199028bcbaa9560bdaba63d83f858b467407cc276972b34f341cc25260db1d1358e88d WHIRLPOOL bddcba6a4285ea2b58dd01f76b7b050db630eaa97de5bba32a66f7f85563e6a99763a52e82286297f605dfa59d9ff918007baab297e587968ac1c83e3d69e8a8
-EBUILD pdfpc-3.1.1.ebuild 498 SHA256 41010ef894b3842ec381bf5351ec5eeb91bc89b6d1e89254fba6592682446a21 SHA512 2970fa0fb91aad94891455d9f771b3396ef26ac25794e063df5d946cd2c6c9b16faf06817b90f78363f00841d6cdf66ddf7dbbabb91d648a3500e9c62d753f1c WHIRLPOOL e6d8e74aca3e985d14aac393b8d54853b91745461aa8ac5443ed9a2669073021bf1e182876bf6fa520c946eed1ac915d0addd718a97931413e4a0273cda928f9
-MISC ChangeLog 156 SHA256 846d80aebcb61a9d5e8c4cca6e30482e5d8269476f7011ae2721488c6152d862 SHA512 d484f32c0cd84b82adbaecf62bd224fb0a725d84fa322e63ae9ff8a41f3af27f0ed43915b1a59cdbeca08da301fb3c57d74859479b0c9093253859c0b8852749 WHIRLPOOL 9ca9004898813516b36389c496ae254f912c8b9cef5cd17984b03e3a7b9d65d618747bc3aa43d48d77f5d9e9a9ed641be7e01d6f331bc2d0992ce7b18373a5fe
+EBUILD pdfpc-3.1.1-r1.ebuild 602 SHA256 c91f4b96e7b673a37954562ec4b8247dba20b7e3e47db0de1a3068a99e5d0b1f SHA512 d23277ad883532b6d4cfcd5fd2a0e8bbe6efa0c5fa97a6dd46cee21e749e426b36057f51efd644dd24f95b14edc77f99df6117dffbf2b1d5c1a4e0faad8eb553 WHIRLPOOL d6dc967b347eda0bb82cb3da791282a857cb2dc0a0010010e019a5ba38e201c370ef0ffefecce74920174b05bfc951ffc2ba44b8f13b6fdebd85e74712da504e
+MISC ChangeLog 322 SHA256 049ba1fb033ff4be02e584cd4498e7fa9482b67b0bc672f6b8836aa796a0fbb2 SHA512 980a0d21244c616f2cd419af0cf0548acb10025d467d90160ddd7de166db2b9b3189ebcc74f6678899f950671dd8743bd1d3183455e250e010be1016f226b28a WHIRLPOOL 40827e09631bcda875d305ae689338293b70ccfa5f0df8274e59a87cdd536e937b91907c85fed63145ff3686e4507215523a7c0074d74cdaccd3a2ee51a179be
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
