@@ -20,3 +20,10 @@ RDEPEND="app-text/poppler[cairo]
 	gnome-base/librsvg
 	x11-libs/gtk+:2"
 DEPEND="${RDEPEND}"
+
+src_configure(){
+	local mycmakeargs=(
+		-DSYSCONFDIR="${EPREFIX}/etc"
+		)
+	cmake-utils_src_configure
+}
