@@ -1,3 +1,9 @@
+*pdfpc-3.1.1-r1 (02 Nov 2012)
+
+  02 Nov 2012; Manuel Rueger (mrueg) gentoo@rueg.eu +pdfpc-3.1.1-r1.ebuild,
+  -pdfpc-3.1.1.ebuild:
+  x11-misc/pdfpc: Fix install path
+
 *pdfpc-3.1.1 (24 Aug 2012)
 
   24 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu +metadata.xml,
